# ElasticOps

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.deploy  Makefile.local  Makefile.test  README.md  SECURITY.md  docker-compose.test.yaml  docker-compose.yaml  example.env.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
backend/: auth.py  database.py  dependencies.py  main.py
backend/models/: __init__.py  cluster.py  job.py  run.py  snapshot.py  user.py  user_cluster.py
backend/routes/: admin.py  auth.py  clusters.py  es.py  jobs.py
backend/schemas/: analysis.py  auth.py  cluster.py  es.py  job.py
backend/services/: analyzer.py  drain.py  es_client.py  executor.py  job_runner.py  poller.py  rate_limit.py  rebalance.py  recommender.py  role_logic.py  secrets.py  snapshot_repo.py  snapshot_service.py
config/: settings.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  clusters.ts  es.ts  jobs.ts  rest.ts
frontend/src/components/: ClusterDialog.tsx  ErrorBoundary.tsx  QueryError.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/context/: AuthContext.tsx  ClusterContext.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: Indices.tsx  Jobs.tsx  Login.tsx  Nodes.tsx  Overview.tsx  Rest.tsx  Settings.tsx  Setup.tsx  ShardMap.tsx  Users.tsx
site/: CNAME  index.html
tests/: conftest.py  test_admin.py  test_analyze_route.py  test_analyzer.py  test_analyzer_config.py  test_analyzer_deleted_docs.py  test_auth.py  test_cluster_active_gating.py  test_cluster_crypto.py  test_clusters.py  test_drain.py  test_es_client.py  test_es_client_ops.py  test_es_readonly_writes.py  test_es_routes.py  test_es_snapshot_routes.py  test_executor.py  test_executor_drain.py  test_executor_forcemerge.py  test_executor_inplace_resize.py  test_executor_promote.py  test_executor_reindex.py  test_executor_relocate.py  test_executor_split.py  test_health.py  test_job_runner.py  test_job_runner_queue.py  test_jobs.py  test_jobs_cancel.py  test_jobs_clear.py  test_jobs_drain_endpoint.py  test_jobs_execute_async.py  test_jobs_promote_endpoint.py  test_jobs_reindex_endpoint.py  test_jobs_relocate_endpoint.py  test_poller.py  test_rate_limit.py  test_readonly_guard.py  test_rebalance.py  test_recommend_fingerprint.py  (+8 more)
tests/integration/: test_cluster_ops.py
